--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=SM9000-series sensor library
+name=TE SM9000-series
 version=1.0.0
 author=Teemu Latonen
 maintainer=Teemu Latonen <teemu.p.latonen@gmail.com>
-sentence=Arduino library for TE Connectivity SM9000 series pressure sensors.
-paragraph=Arduino library for TE Connectivity SM9000 series pressure sensors.
+sentence=TE Connectivity SM9000 series pressure sensors.
+paragraph=(SM9233/SM9235/SM9236/SM9333/SM9336).
 category=Sensors
 url=https://github.com/teemune/TE_SM9000_library
 architectures=*
