--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=TE SM9000-series
-version=1.1.0
+version=1.1.1
 author=Teemu Latonen
 maintainer=Teemu Latonen <teemu.p.latonen@gmail.com>
 sentence=TE Connectivity SM9000 series pressure sensors.
-paragraph=(SM9233/SM9235/SM9236/SM9333/SM9336).
+paragraph=(SM9233/SM9235/SM9236/SM9333/SM9336)
 category=Sensors
 url=https://github.com/teemune/TE_SM9000_library
 architectures=*
